# ha-binary-moip

./: .gitignore  README.md  hacs.json  pyproject.toml
custom_components/binary_moip/: __init__.py  adapter.py  config_flow.py  const.py  coordinator.py  manifest.json  media_player.py  sensor.py  strings.json
custom_components/binary_moip/translations/: en.json
tests/: conftest.py  test_adapter.py  test_media_player_helpers.py
